--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -34,8 +34,8 @@ meta(name='msapplication-TileColor', content='#FF5252')
 meta(name='msapplication-TileImage', content='img/ms-icon-144x144.png')
 meta(name='theme-color', content='#FF5252')
 link(rel="mask-icon" href="c.svg" color="#FF5252")
-//-link(rel="stylesheet", type="text/css", href="/style.css")
-style
+link(rel="stylesheet", type="text/css", href="/style.css")
+//-style
     include ../../static/css/style.css
 script
     include ../../static/js/fonts.js
