--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -1,26 +1,28 @@
-footer.row.middle-xs
-    .col-xs-12.col-sm-6
-        h3 #{me.name}
-        ul.footer-navigation
-            li.item
-                a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
-                    |Home
-            li.item
-                a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
-                    |Blog
-            li.item
-                a(href='#{me.mail}', onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
-                    |Contact
+footer
+    .wrap
+        .row.middle-xs
+            .col-xs-12.col-sm-6
+                h3 #{me.name}
+                ul.footer-navigation
+                    li.item
+                        a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
+                            |Home
+                    li.item
+                        a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
+                            |Blog
+                    li.item
+                        a(href='#{me.mail}', onmousedown="ga('send', 'event', 'Footer Nav', 'Mail');")
+                            |Contact
 
-    .social.col-xs-12.col-sm-6
-        a(href="https://twitter.com/#{social.twitter}", target="_blank")
-            svg.icon.icon-twitter
-                use(xlink:href="#icon-twitter")
-        a(href="https://github.com/#{social.github}", target="_blank")
-            svg.icon.icon-github
-                use(xlink:href="#icon-github")
-        a(href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
-            svg.icon.icon-linkedin
-                use(xlink:href="#icon-linkedin")
+            .social.col-xs-12.col-sm-6
+                a(href="https://twitter.com/#{social.twitter}", target="_blank")
+                    svg.icon.icon-twitter
+                        use(xlink:href="#icon-twitter")
+                a(href="https://github.com/#{social.github}", target="_blank")
+                    svg.icon.icon-github
+                        use(xlink:href="#icon-github")
+                a(href="https://es.linkedin.com/in/#{social.linkedin}", target="_blank")
+                    svg.icon.icon-linkedin
+                        use(xlink:href="#icon-linkedin")
 script.
     console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttp://github.com/carloscuesta\nhttp://twitter.com/crloscuesta', 'font-size:16px;color:#455A64', 'font-size:16px;color:#EC407A', 'font-size:16px;color:#455A64', 'font-size:16px;color:#455A64; font-weight:bold;', 'color:#EC407A');
