Minor UI fixes, code refactoring
Minor UI fixes in the blog posts section, code refactoring, updated
styles (.post-info).

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -445,8 +445,9 @@ nav.nav {
 
 .post-info {
 	display: flex;
-	align-items: center;
-	margin-top: .45em;
+    flex-wrap: wrap;
+    margin-top: .45em;
+    align-items: center;
 }
 
 .tags {
