--- a/src/app/templates/_includes/_sections/_blog.jade
+++ b/src/app/templates/_includes/_sections/_blog.jade
@@ -6,7 +6,7 @@ section.blog
             -each post in ghostData.posts
                 .col-xs-12.col-sm-6.col-md-5(style="display:flex;")
                     article.post
-                        img.post-image(src="#{post.image}")
+                        img.post-image(src="#{post.image}", width="442", height="200")
                         .post-content
                             header
                                 h2.post-title
