Add more tests, update aboutme template and style, update package.json
Add tests to check the cache-control header, refactored tests. Update
readme with the coveralls badge, updated styles and templates for
aboutme to separate the styles from the index view. Add coverage/
folder to .gitignore. Removed x2 test at the package.json

--- a/src/app/templates/_includes/_footer.jade
+++ b/src/app/templates/_includes/_footer.jade
@@ -8,6 +8,9 @@ footer
                         a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Footer Nav', 'Home');")
                             |Home
                     li.item
+                        a(href='https://carloscuesta.me/aboutme', onmousedown="ga('send', 'event', 'Footer Nav', 'About me');")
+                            |About Me
+                    li.item
                         a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Footer Nav', 'Blog');", target="_blank")
                             |Blog
                     li.item
@@ -25,4 +28,4 @@ footer
                     svg.icon.icon-linkedin
                         use(xlink:href="#icon-linkedin")
 script.
-    console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttp://github.com/carloscuesta\nhttp://twitter.com/crloscuesta', 'font-size:16px;color:#455A64', 'font-size:16px;color:#EC407A', 'font-size:16px;color:#455A64', 'font-size:16px;color:#455A64; font-weight:bold;', 'color:#EC407A');
+    console.log('%cMade with '+'%c♥'+'%c by %cCarlos Cuesta%c\nhttps://github.com/carloscuesta | https://twitter.com/crloscuesta | https://linkedin.com/in/crloscuesta', 'font-size:18px;font-family:Montserrat;color:#37474F;', 'font-size:18px;font-family:Montserrat;color:#FF5252;', 'font-size:18px;font-family:Montserrat;color:#37474F;', 'font-size:18px;color:#FF5252;font-family:Montserrat;font-weight:bold;','');
