--- a/src/app/templates/_includes/_nav.jade
+++ b/src/app/templates/_includes/_nav.jade
@@ -9,8 +9,8 @@ nav.nav.row.middle-xs
                     a(href='https://carloscuesta.me', onmousedown="ga('send', 'event', 'Menu', 'Home');")
                         |Home
                 li.item
+                    a(href='https://carloscuesta.me/aboutme', onmousedown="ga('send', 'event', 'Menu', 'About Me');", target="_blank")
+                        |About Me
+                li.item
                     a(href='https://carloscuesta.me/blog', onmousedown="ga('send', 'event', 'Menu', 'Blog');", target="_blank")
                         |Blog
-                li.item
-                    a(href='#{me.mail}', onmousedown="ga('send', 'event', 'Menu', 'Mail');", target="_blank")
-                        |Contact
