--- a/src/app/templates/views/aboutme.jade
+++ b/src/app/templates/views/aboutme.jade
@@ -2,9 +2,10 @@ doctype html
 html
     head
         title #{site.title} | About Me
-        style
-            include ../../static/css/style.css
-        script
+        link(rel="stylesheet", type="text/css", href="/aboutme.css")
+        //-style
+            include ../../static/css/aboutme.css
+        script  
             include ../../static/js/fonts.js
     body
         include ../_includes/_icons.jade
