--- a/src/app/styles/error.scss
+++ b/src/app/styles/error.scss
@@ -36,6 +36,11 @@ html, body {
 	}
 }
 
+.btn-blue {
+	background-color: #52b8ff;
+	box-shadow: 0 .5em 1.5em rgba(82, 184, 255, .45);
+}
+
 .btn-return {
 	display:flex;
 	padding-top:1em;
