--- a/src/app/templates/views/errors/500.jade
+++ b/src/app/templates/views/errors/500.jade
@@ -1,7 +1,7 @@
 doctype html
 html
     head
-        title Carlos Cuesta | Error 404
+        title Carlos Cuesta | Error 500
         meta(charset="utf-8")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(name="twitter:card", content="summary")
@@ -34,9 +34,9 @@ html
         .container
             .row.message.middle-xs
                 .col-xs-12
-                    h1 Are you lost?
-                    h2 The page you are looking for doesn't exists.
-                    h3 Here are some helpful links instead:
+                    h1 Oops! There's an error
+                    h2 #{error}
+                    h3 Please try again. Here are some helpful links instead:
                     nav
                         ul
                             li #[a(href="http://carloscuesta.me", onmousedown="ga('send', 'event', '404','Click', 'Link Home');") Home]
@@ -44,8 +44,9 @@ html
                             li #[a(href="http://carloscuesta.me/blog", onmousedown="ga('send', 'event', '404','Click', 'Link Blog');") Blog]
                             li #[a(href="http://carloscuesta.me/sitemap.xml", onmousedown="ga('send', 'event', '404','Click', 'Link Sitemap');") Sitemap]
                     h4 Error Code: 
-                        span.status-code 404
+                        span.status-code 500
                     div.btn-return
-                        a(href="https://carloscuesta.me", onmousedown="ga('send', 'event', '404','Click', 'Return Button');").btn.btn-raised Return to carloscuesta
+                        a(href="mailto:hi@carloscuesta.me?Subject=Error @ carloscuesta.me - #{error}", onmousedown="ga('send', 'event', '500','Click', 'Contact');").btn.btn-raised Contact site administrator
+                        a(href="https://carloscuesta.me", onmousedown="ga('send', 'event', '500','Click', 'Return Button');").btn.btn-blue Return to carloscuesta
         script.
-            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');ga('send', 'event', 'Error','404', 'Page not found');
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');ga('send', 'event', 'Error', '500', '#{error}');
