--- a/src/app/templates/views/aboutme.jade
+++ b/src/app/templates/views/aboutme.jade
@@ -55,5 +55,10 @@ html
                     h2.section-title Awards
                     h4.section-subtitle Work experience as a Front End developer.
                     .row.around-xs
+            section.skills
+                .wrap
+                    h2.section-title Skills
+                    h4.section-subtitle Work experience as a Front End developer.
+                    .row.around-xs
         include ../_includes/_footer.jade
         
