Update staticData, aboutme templates and styles, add logos
Added job section to provide data to render the jade templates the job
experience, added _logos, updated templates and styles.

--- a/src/app/styles/_partials/_mixins.scss
+++ b/src/app/styles/_partials/_mixins.scss
@@ -14,6 +14,12 @@
 	}
 }
 
+@mixin createCompanyBorder($name, $color) {
+	.#{$name} {
+		border-top-color: $color;
+	}
+}
+
 @mixin small {
     @media (max-width: 768px) {
         @content;
