--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -66,9 +66,10 @@
 	&-blue {
 		background-color: #2196F3;
 		color: $white;
+		box-shadow: 0 .5em 1.5em rgba(33, 150, 243, .45);
 
 		&:hover {
-			box-shadow: 0 .5em 1.5em rgba(33, 150, 243, .45);
+			box-shadow: none;
 		}
 	}
 
