Update aboutme templates and styles
Updated about me templates and styles, content added fr logo.

--- a/src/app/templates/_includes/_sections/_profile.jade
+++ b/src/app/templates/_includes/_sections/_profile.jade
@@ -19,4 +19,7 @@ section.aboutme
                         svg.icon.icon-linkedin
                             use(xlink:href="#icon-linkedin")
             .col-xs-12.col-md-8
-                p Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                p Hello!
+                | My name is #[strong Carlos Cuesta] I'm a 20 years old #[strong Front End Developer] based in Barcelona. I describe myself as a developer who loves coding, open source, and the web platform. Currently I'm working at a company called Mediàtic, as a Front End Developer.
+                p In my spare time I like to #[strong create] and #[strong contribute] to #[strong open source] projects. That helps me to learn a lots of new stuff, grow as a developer and support other open source projects.
+                p Also, I enjoy writing at my #[a(href="https://carloscuesta.me/blog") blog] and going to developer meetups and conferences around Barcelona.
