--- a/src/app/templates/views/aboutme.jade
+++ b/src/app/templates/views/aboutme.jade
@@ -2,6 +2,38 @@ doctype html
 html
     head
         title #{me.name} | About Me | #{me.job}
+        meta(name="author", content="#{me.name}")
+        meta(charset="utf-8")
+        link(rel="canonical", href="https://carloscuesta.me/aboutme")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(name="twitter:card", content="summary")
+        meta(name="twitter:title", content="#{site.title}")
+        meta(name="twitter:description", content="#{site.description}")
+        meta(name="twitter:image:src", content="http://carloscuesta.me/#{me.avatar}")
+        meta(name="twitter:creator", content="@crloscuesta")
+        meta(name="twitter:url", content="https://carloscuesta.me/aboutme")
+        meta(property="og:title", content="#{site.title}")
+        meta(name="og:description", content="#{site.description}")
+        meta(property="og:image", content="http://carloscuesta.me/#{me.avatar}")
+        meta(name="og:url", content="https://carloscuesta.me/aboutme")
+        link(rel="apple-touch-icon", sizes="57x57", href="img/apple-icon-57x57.png")
+        link(rel="apple-touch-icon", sizes="60x60", href="img/apple-icon-60x60.png")
+        link(rel="apple-touch-icon", sizes="72x72", href="img/apple-icon-72x72.png")
+        link(rel="apple-touch-icon", sizes="76x76", href="img/apple-icon-76x76.png")
+        link(rel="apple-touch-icon", sizes="114x114", href="img/apple-icon-114x114.png")
+        link(rel="apple-touch-icon", sizes="120x120", href="img/apple-icon-120x120.png")
+        link(rel="apple-touch-icon", sizes="144x144", href="img/apple-icon-144x144.png")
+        link(rel="apple-touch-icon", sizes="152x152", href="img/apple-icon-152x152.png")
+        link(rel="apple-touch-icon", sizes="180x180", href="img/apple-icon-180x180.png")
+        link(rel='icon', type='image/png', sizes='192x192', href='img/android-icon-192x192.png')
+        link(rel='icon', type='image/png', sizes='32x32', href='img/favicon-32x32.png')
+        link(rel='icon', type='image/png', sizes='96x96', href='img/favicon-96x96.png')
+        link(rel='icon', type='image/png', sizes='16x16', href='img/favicon-16x16.png')
+        link(rel='manifest', href='manifest.json')
+        meta(name='msapplication-TileColor', content='#FF5252')
+        meta(name='msapplication-TileImage', content='img/ms-icon-144x144.png')
+        meta(name='theme-color', content='#FF5252')
+        link(rel="mask-icon" href="c.svg" color="#FF5252")
         //-link(rel="stylesheet", type="text/css", href="/aboutme.css")
         style
             include ../../static/css/aboutme.css
