--- a/src/app/templates/views/aboutme.jade
+++ b/src/app/templates/views/aboutme.jade
@@ -52,7 +52,7 @@ html
         main
             include ../_includes/_sections/_profile.jade
             include ../_includes/_sections/_experience.jade
-            //-section.education.col-xs-12
+            section.education.col-xs-12
                 .wrap
                     h2.section-title Education
                     h4.section-subtitle Work experience as a Front End developer.
