Add analytics to aboutme

--- a/src/app/templates/_includes/_head.jade
+++ b/src/app/templates/_includes/_head.jade
@@ -16,6 +16,7 @@ meta(property="og:title", content="#{site.title}")
 meta(name="og:description", content="#{site.description}")
 meta(property="og:image", content="http://carloscuesta.me/#{me.avatar}")
 meta(name="og:url", content="https://carloscuesta.me")
+meta(name="robots", content="index, follow")
 link(rel="apple-touch-icon", sizes="57x57", href="img/apple-icon-57x57.png")
 link(rel="apple-touch-icon", sizes="60x60", href="img/apple-icon-60x60.png")
 link(rel="apple-touch-icon", sizes="72x72", href="img/apple-icon-72x72.png")
