--- a/src/app/templates/views/aboutme.jade
+++ b/src/app/templates/views/aboutme.jade
@@ -16,6 +16,7 @@ html
         meta(name="og:description", content="#{site.description}")
         meta(property="og:image", content="http://carloscuesta.me/#{me.avatar}")
         meta(name="og:url", content="https://carloscuesta.me/aboutme")
+        meta(name="robots", content="index, follow")
         link(rel="apple-touch-icon", sizes="57x57", href="img/apple-icon-57x57.png")
         link(rel="apple-touch-icon", sizes="60x60", href="img/apple-icon-60x60.png")
         link(rel="apple-touch-icon", sizes="72x72", href="img/apple-icon-72x72.png")
@@ -68,4 +69,6 @@ html
                     h4.section-subtitle Things that I use and love.
                     .row.around-xs
         include ../_includes/_footer.jade
+        script.
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','https://carloscuesta.me/ga.js','ga');ga('create', 'UA-67824860-3', 'auto');ga('send', 'pageview');
         
