--- a/src/app/templates/views/aboutme.jade
+++ b/src/app/templates/views/aboutme.jade
@@ -53,16 +53,8 @@ html
         main
             include ../_includes/_sections/_profile.jade
             include ../_includes/_sections/_experience.jade
-            section.education.col-xs-12
-                .wrap
-                    h2.section-title Education
-                    h4.section-subtitle Work experience as a Front End developer.
-                    .row.around-xs
-            //-section.awards
-                .wrap
-                    h2.section-title Awards
-                    h4.section-subtitle Work experience as a Front End developer.
-                    .row.around-xs
+            include ../_includes/_sections/_education.jade
+            include ../_includes/_sections/_awards.jade
             //-section.skills
                 .wrap
                     h2.section-title Skills
