--- a/src/app/templates/_includes/_sections/_experience.jade
+++ b/src/app/templates/_includes/_sections/_experience.jade
@@ -2,7 +2,7 @@ section.experience
     .wrap
         h2.section-title Experience
         h4.section-subtitle Jobs as a Front End developer.
-        .row.around-xs
+        .row
             -each job in me.jobs
                 article.col-xs-12.col-sm-6.col-md-4.job-card
                     div(class="job #{job.company.color}")
