Update blog templates and styles

--- a/src/app/styles/style.scss
+++ b/src/app/styles/style.scss
@@ -451,6 +451,12 @@ nav.nav {
     align-items: center;
 }
 
+.post-footer {
+	background: #fff;
+	padding: 1em 2.5em;
+	border-top: 1px #eee solid;
+}
+
 .tags {
 	.tag {
 
