--- a/src/app/templates/_includes/_header.jade
+++ b/src/app/templates/_includes/_header.jade
@@ -6,4 +6,4 @@ header.site-header(itemprop="author", itemscope, itemtype="http://schema.org/Per
             span.my-name  #{me.name}
         h2.job #{me.job}
         .buttons
-            a.btn.btn-large.btn-red.btn-red-raised(href="mailto:#{me.mail}?subject=Hello", onmousedown="ga('send', 'event', 'Header', 'Click' 'Button - Get in touch');") Get in touch
+            a.btn.btn-large.btn-red.btn-red-raised(href="mailto:#{me.mail}?subject=Hello", onmousedown="ga('send', 'event', 'Header', 'Click', 'Button - Get in touch');") Get in touch
