--- a/src/blog/content/themes/carloscuesta/post.hbs
+++ b/src/blog/content/themes/carloscuesta/post.hbs
@@ -11,7 +11,7 @@
   	<meta itemprop="height" content="1350">
 	{{/if}}
 </header>
-<div class="wrap">
+<div class="wrap article-card">
 	<main class="content" role="main">
 
         <header class="post-header row">
